fixed z-index issue

--- a/src/styles/layout/ui.scss
+++ b/src/styles/layout/ui.scss
@@ -61,7 +61,7 @@
     &__settings{
         grid-area: screen;
         display: none;
-        z-index: 5;  
+        z-index: 25;  
         padding: 1rem;
         background: rgba(85, 85, 85, 0.8);
         
@@ -95,7 +95,7 @@
     &__form{
         grid-area: form;
         padding: 1rem;
-        z-index: 5;
+        z-index: 25;
 
 
         @include respond("tab-port"){
@@ -115,7 +115,7 @@
     }
     
     &__navigations{
-        z-index: 5;
+        z-index: 25;
         grid-area: menu;
         display: flex;
         justify-content: center;
@@ -230,7 +230,7 @@
         width: 100%;
         height: 100%;
         background: rgba(85,85,85,.8);
-        z-index: 5;
+        z-index: 25;
         display: none;
        
     }
